# tono

./: .gitattributes  .gitignore  .ocamlformat  README.md  clippy.toml  deny.toml  dune  sonar-project.properties
.github/: dependabot.yml
.github/workflows/: ci.yml  quality.yml  security.yml  sonar.yml
backend/: Cargo.toml
backend/codegen-tests/go/: .gitignore  conformance.go  go.mod  main.go
backend/codegen-tests/rust/: .gitignore  Cargo.toml
backend/codegen-tests/rust/src/: main.rs
backend/codegen-tests/typescript/: .gitignore  package-lock.json  package.json  tsconfig.json
backend/src/: ir.rs  lib.rs
backend/src/codegen/: casing.rs  conventions.rs  format.rs  imports.rs  mod.rs  ops.rs  pipeline.rs  render.rs  symbol.rs  syntax.rs  target.rs  test_support.rs  tree.rs
backend/tests/: conformance.rs  go_roundtrip.rs  ir_roundtrip.rs  rust_roundtrip.rs  typescript_roundtrip.rs
backend/tests/common/: mod.rs
cli/: Cargo.toml
cli/src/: main.rs
cli/tests/: gen.rs
examples/payments/: README.md  ir.json  payments.tono
frontend/corpus/: dune  ir_corpus.ml
frontend/lib/: dune  tono_frontend.ml
frontend/lib/calculus/: calc_ast.ml  calc_ast.mli  calc_check.ml  calc_check.mli  calc_error_codes.ml  calc_error_codes.mli  calc_eval.ml  calc_eval.mli  calc_lexer.ml  calc_lexer.mli  calc_parser.ml  calc_parser.mli  calc_token.ml  calc_token.mli  calc_types.ml  calc_types.mli
frontend/lib/ir/: ir.ml  (+3 more)
frontend/test/: calculus_test.ml  cli_test.ml  core_test.ml  decl_test.ml  dune  file_test.ml  fmt_property_test.ml  fmt_test.ml  golden_test.ml  lexer_test.ml  parse_error_test.ml  struct_test.ml  test_decode.ml  test_frontend.ml  test_ir.ml  test_property.ml  type_test.ml  typecheck_test.ml
frontend/tools/: dump_fixtures.ml  dune
ir-schema/: ENCODING.md  README.md
ir-schema/fixtures/: list_charges.json  nullable_charge.json  open_enum_union.json  primitives.json  service_api.json
lsp/: dune  tono_lsp.ml
scripts/: check-example-compiles.sh  check-file-size.sh  ir_roundtrip.sh  regen-example.sh
(+62 files in other folders)
