(tests
 (names
  test_ir
  test_decode
  test_property
  lexer_test
  type_test
  struct_test
  core_test
  parse_error_test
  decl_test
  file_test
  golden_test
  typecheck_test
  calculus_test
  cli_test
  fmt_test
  fmt_property_test)
 (libraries tono_frontend alcotest qcheck-core qcheck-core.runner yojson))
