[package]
name = "codegen-tests-rust"
version = "0.0.0"
edition = "2021"
publish = false
# The round-trip driver is the default binary; the conformance harness selects
# the second binary explicitly with `--bin conformance`.
default-run = "codegen-tests-rust"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# serde is used by the generated models.rs (written by the harness, gitignored),
# so the static unused-dependency scan cannot see the usage.
[package.metadata.cargo-machete]
ignored = ["serde"]

# Detach from the backend workspace: this crate exists only so the round-trip
# harness can compile and run generated Rust, and its coverage must not count.
[workspace]
